apps/freshrss/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
        runAsNonRoot: true
        fsGroup: 2000
      containers:
      - name: freshrss
        image: ghcr.io/erhardtconsulting/freshrss:latest
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: false
        - name: extensions
          mountPath: /opt/freshrss/extensions
          readOnly: false
        - name: tmp-tmpfs
          mountPath: /tmp
          readOnly: false
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 500m
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: freshrss-data
      - name: extensions
        persistentVolumeClaim:
          claimName: freshrss-extensions
      - name: tmp-tmpfs
        emptyDir:
          medium: Memory
