apps/freshrss/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  selector:
    app.kubernetes.io/component: server
  ports:
  - name: http
    port: 8080
    targetPort: http
