apps/freshrss/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: freshrss
  namespace: freshrss
spec:
  gatewayClassName: traefik
  listeners:
  - protocol: HTTP
    port: 8000
    name: http-gw
    hostname: freshrss.narthollis.net
  - protocol: HTTPS
    port: 8443
    name: https-gw
    hostname: freshrss.narthollis.net
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: freshrss-narthollis-net-tls
