apps/freshrss/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: freshrss
    sectionName: https-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: freshrss
      port: 8080
      weight: 1
